--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,20 +16,29 @@
     display: none;
   }
 }
+.backdropSafari {
+  -webkit-backdrop-filter: blur(20px);
+  backdrop-filter: 20px;
+}
+.headerBackdropSafari {
+  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: 10px;
+}
 
-body {
-  background-image: url("/background_2.png");
+.headerBackground { 
+  background-image: url("/header_1.png");
+  background-size: 35%;
   background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: cover;
 }
 
-html {
-  overflow-x: hidden;
-  overscroll-behavior: none;
-}
-body {
-  overscroll-behavior: none;
+.headerBackground::before {
+  content: "";
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+  left: 0px;
+  background-color: rgba(248, 245, 245, 0.5);
 }
 
 .safari-fixes {
