--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,25 +25,41 @@
   backdrop-filter: 10px;
 }
 
-.headerBackground { 
-  background-image: url("../../public/images/header1.png");
-  background-size: 50%;
+
+.fixed-header {
+  position: fixed;
+  z-index: 20;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 6rem; 
+  background-color: rgba(241, 241, 241, 0.5); 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: transform 0.3s ease;
+}
+
+
+.headerImage { 
+  position: absolute; 
+  top: 0;
+  left: 0;
+  width: 25%; 
+  height: 100%; 
+  background-image: 
+    linear-gradient(to right, rgba(255, 255, 255, 0) 70%, rgba(248, 245, 245, 0.9) 100%),
+    url("../../public/images/7.png");
+  background-size: cover;
   background-repeat: no-repeat;
+  background-blend-mode: normal; 
+  z-index: -1; 
+  opacity: 0.5;
 }
 
 .logo {
   width: 300px;
   height: auto;
-}
-
-.headerBackground::before {
-  content: "";
-  position: absolute;
-  top: 0px;
-  right: 0px;
-  bottom: 0px;
-  left: 0px;
-  background-color: rgba(248, 245, 245, 0.5);
 }
 
 .safari-fixes {
