--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,6 +25,22 @@
   backdrop-filter: 10px;
 }
 
+body:before {
+  content: "";
+  display: block;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -10;
+  background: url(../../public/images/background.png) no-repeat center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
 
 .fixed-header {
   position: fixed;
