--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -71,6 +71,7 @@ body:before {
   background-repeat: no-repeat;
   background-blend-mode: normal; 
   z-index: -1; 
+  opacity: 0.5;
 }
 
 .safari-fixes {
